--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,20 +15,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
-        android:layout_above="@+id/divider_list_from_textfield"
+        android:layout_above="@+id/message_field"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:paddingLeft="25dp"
-        android:paddingRight="25dp"/>
-
-    <TextView
-        android:id="@+id/divider_list_from_textfield"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000"
-        android:layout_marginBottom="5dp"
-        android:layout_above="@+id/message_field"
-        tools:layout_editor_absoluteX="8dp" />
+        android:paddingRight="25dp"
+        android:background="#EEEEEE"/>
 
     <EditText
         android:id="@+id/message_field"
@@ -36,7 +28,8 @@
         android:layout_height="180dp"
         android:hint="@string/hint_edit_message"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="60dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:backgroundTint="#FFE082"
+        android:background="#FFF8E1"/>
 
 </RelativeLayout>
