--- a/app/src/main/res/layout/contact_list_header.xml
+++ b/app/src/main/res/layout/contact_list_header.xml
@@ -1,36 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_alignParentTop="true"
+    android:layout_marginTop="2dp"
     android:weightSum="1">
 
     <CheckBox
-        android:id="@+id/contact_list_item_checkbox"
+        android:id="@+id/contact_list_header_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.01"/>
 
     <TextView
-        android:id="@+id/contact_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
-        android:text="name"
         android:layout_weight="0.59"
-        android:layout_marginBottom="2dp"/>
+        android:text="@string/contact_list_header_name"
+        android:textAlignment="center"/>
 
     <TextView
-        android:id="@+id/contact_phone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
-        android:text="559599587547"
         android:layout_weight="0.40"
-        android:textAlignment="center"
-        android:layout_gravity="center"/>
+        android:text="@string/contact_list_header_phone"
+        android:textAlignment="center"/>
 
 </LinearLayout>
